--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <link rel="icon" href="/Gestion-des-performances/favicon.ico" type="image/x-icon">
   <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' https://cdn.tailwindcss.com https://alcdn.msauth.net https://cdnjs.cloudflare.com 'unsafe-inline';
-  style-src 'self' https://cdnjs.cloudflare.com 'unsafe-inline';
   img-src 'self' https://oukafati.github.io data:;
   font-src 'self' https://cdnjs.cloudflare.com data:;
-">
+  script-src 'self' https://cdn.tailwindcss.com https://alcdn.msauth.net https://cdnjs.cloudflare.com;
+  style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;">
   <style>
     .bg-gradient {
       background: linear-gradient(135deg, #2563eb 0%, #1e40af 100%);
