--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' http://oukafati.github.io data:;">
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Connexion RH</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="icon" href="/Gestion-des-performances/favicon.ico" type="image/x-icon">
-  <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  img-src 'self' https://oukafati.github.io data:;
-  font-src 'self' https://cdnjs.cloudflare.com data:;
-  script-src 'self' https://cdn.tailwindcss.com https://alcdn.msauth.net https://cdnjs.cloudflare.com;
-  style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;">
+  
   <style>
     .bg-gradient {
       background: linear-gradient(135deg, #2563eb 0%, #1e40af 100%);
