--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="icon" href="/Gestion-des-performances/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://github.com/Oukafati/Gestion-des-performances/blob/main/favicon.ico" type="image/x-icon">
   
   <style>
     .bg-gradient {
