--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ const msalConfig = {
   auth: {
     clientId: "27cd1750-4356-4fd4-a4d2-0b418ca13f34", // 🔁 Remplacez par votre vrai client ID Azure
     authority: "https://login.microsoftonline.com/common",
-    redirectUri: "http://localhost:5500" // 🔁 Mets le bon port de ton Live Server
+    redirectUri: "https://oukafati.github.io/Gestion-des-performances", // 🔁 Mets le bon port de ton Live Server
   },
   cache: {
     cacheLocation: "localStorage",
