--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta http-equiv="Content-Security-Policy" content="img-src 'self' http://oukafati.github.io data:;">
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Connexion RH</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="icon" href="https://github.com/Oukafati/Gestion-des-performances/blob/main/favicon.ico" type="image/x-icon">
-  
   <style>
     .bg-gradient {
       background: linear-gradient(135deg, #2563eb 0%, #1e40af 100%);
@@ -35,7 +34,7 @@
   <div class="card bg-white rounded-xl shadow-xl overflow-hidden w-full max-w-md">
     <div class="bg-gradient py-6 px-8 text-center">
       <i class="fas fa-user-tie text-white text-5xl mb-4"></i>
-      <h1 class="text-2xl font-bold text-white">Plateforme Fixation et evaluation des Objectifs</h1>
+      <h1 class="text-2xl font-bold text-white">Plateforme Fixation et évaluation des Objectifs</h1>
       <p class="text-blue-100 mt-2">Accédez à vos outils de gestion des ressources humaines</p>
     </div>
     
@@ -69,45 +68,35 @@
   </div>
 
   <script>
-   console.log("Initialisation MSAL...");
+    console.log("Initialisation MSAL...");
 
-const msalConfig = {
-  auth: {
-    clientId: "27cd1750-4356-4fd4-a4d2-0b418ca13f34", // 🔁 Remplacez par votre vrai client ID Azure
-    authority: "https://login.microsoftonline.com/common",
-    redirectUri: "https://oukafati.github.io/Gestion-des-performances/", // 🔁 Mets le bon port de ton Live Server
-  },
-  cache: {
-    cacheLocation: "localStorage",
-    storeAuthStateInCookie: false
-  }
-};
+    const msalConfig = {
+      auth: {
+        clientId: "27cd1750-4356-4fd4-a4d2-0b418ca13f34",
+        authority: "https://login.microsoftonline.com/common",
+        redirectUri: "https://orbish.sharepoint.com/:u:/s/PlatformeFixationdeobjectifsetevaluationdelaperformance/Ed9W4-EvsjtPirbl0VxBe9gByWNePkiFeQW_IJwMFmvDIw?e=39tyYw/",
+      },
+      cache: {
+        cacheLocation: "localStorage",
+        storeAuthStateInCookie: false
+      }
+    };
 
-const msalInstance = new msal.PublicClientApplication(msalConfig);
-const loginRequest = {
-  scopes: ["User.Read"],
-  prompt: "select_account"
-};
+    const msalInstance = new msal.PublicClientApplication(msalConfig);
+    const loginRequest = {
+      scopes: ["User.Read"],
+      prompt: "select_account"
+    };
 
-// Vérifie si nous sommes dans une redirection après authentification
-msalInstance.handleRedirectPromise()
+    msalInstance.handleRedirectPromise()
   .then(response => {
     if (response) {
       handleResponse(response);
     } else {
-      // Vérifie si un compte est déjà connecté
       const accounts = msalInstance.getAllAccounts();
       if (accounts.length > 0) {
-        console.log("Compte déjà connecté :", accounts[0]);
-        const silentRequest = {
-          scopes: ["User.Read"],
-          account: accounts[0]
-        };
-        msalInstance.acquireTokenSilent(silentRequest)
-          .then(handleResponse)
-          .catch(error => {
-            console.error("Erreur lors de l'acquisition silencieuse :", error);
-          });
+        // Un compte est déjà connecté, pas besoin de redemander la connexion
+        handleResponse({ account: accounts[0] });
       }
     }
   })
@@ -116,14 +105,13 @@ msalInstance.handleRedirectPromise()
     showError("Une erreur est survenue lors de la connexion");
   });
 
-// Gestion du clic sur le bouton de connexion
 document.getElementById("loginBtn").addEventListener("click", async () => {
   try {
     showLoading();
 
-    // Vérifie d'abord s'il y a des comptes déjà connectés
     const accounts = msalInstance.getAllAccounts();
     if (accounts.length > 0) {
+      // Si un compte est déjà connecté, acquérir un token silencieusement
       const silentRequest = {
         scopes: ["User.Read"],
         account: accounts[0]
@@ -137,7 +125,7 @@ document.getElementById("loginBtn").addEventListener("click", async () => {
         await msalInstance.loginRedirect(loginRequest);
       }
     } else {
-      // Aucun compte connecté, lance le processus de connexion
+      // Aucun compte connecté, rediriger pour une connexion interactive
       await msalInstance.loginRedirect(loginRequest);
     }
   } catch (error) {
@@ -147,34 +135,32 @@ document.getElementById("loginBtn").addEventListener("click", async () => {
   }
 });
 
-function handleResponse(response) {
-  hideLoading();
+    function handleResponse(response) {
+      hideLoading();
 
-  if (response && response.account) {
-    const userEmail = response.account.username;
-    console.log("Connecté en tant que :", userEmail);
+      if (response && response.account) {
+        const userEmail = response.account.username;
+        console.log("Connecté en tant que :", userEmail);
 
-    // Stocke l'email dans le localStorage
-    localStorage.setItem("userEmail", userEmail);
+        localStorage.setItem("userEmail", userEmail);
 
-    // Redirige vers le dashboard
-    window.location.href = "manager_dashboard.html";
-  } else {
-    console.log("Pas encore connecté.");
-  }
-}
+        window.location.href = "manager_dashboard.html";
+      } else {
+        console.log("Pas encore connecté.");
+      }
+    }
 
-function showLoading() {
-  document.getElementById('loadingOverlay').classList.remove('hidden');
-}
+    function showLoading() {
+      document.getElementById('loadingOverlay').classList.remove('hidden');
+    }
 
-function hideLoading() {
-  document.getElementById('loadingOverlay').classList.add('hidden');
-}
+    function hideLoading() {
+      document.getElementById('loadingOverlay').classList.add('hidden');
+    }
 
-function showError(message) {
-  alert(message); // Dans une vraie application, vous utiliseriez un toast ou une modal plus élégante
-}
+    function showError(message) {
+      alert(message);
+    }
   </script>
 </body>
 </html>
