--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       auth: {
         clientId: "27cd1750-4356-4fd4-a4d2-0b418ca13f34",
         authority: "https://login.microsoftonline.com/common",
-        redirectUri: "https://orbish.sharepoint.com/:u:/s/PlatformeFixationdeobjectifsetevaluationdelaperformance/Ed9W4-EvsjtPirbl0VxBe9gByWNePkiFeQW_IJwMFmvDIw?e=39tyYw/",
+        redirectUri: "http://localhost:5500/",
       },
       cache: {
         cacheLocation: "localStorage",
