--- a/manager_dashboard.html
+++ b/manager_dashboard.html
@@ -409,7 +409,7 @@
     auth: {
         clientId: "27cd1750-4356-4fd4-a4d2-0b418ca13f34", // Remplacez par votre client ID Azure AD
         authority: "https://login.microsoftonline.com/common",
-        redirectUri: "https://orbish.sharepoint.com/:u:/s/PlatformeFixationdeobjectifsetevaluationdelaperformance/Ed9W4-EvsjtPirbl0VxBe9gByWNePkiFeQW_IJwMFmvDIw?e=39tyYw/" // Remplacez par votre URL de redirection
+        redirectUri: "http://localhost:5500/" // Remplacez par votre URL de redirection
     },
     cache: {
         cacheLocation: "localStorage",
