--- a/manager_dashboard.html
+++ b/manager_dashboard.html
@@ -95,7 +95,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar w-64 bg-blue-800 text-white min-h-screen fixed z-10">
             <div class="p-4 flex items-center justify-between border-b border-blue-700">
-                <img src="./images/Logo.png" alt="Logo ORBIS" class="h-8 w-auto mr-2">
+                <img src="./Logo.png" alt="Logo ORBIS" class="h-8 w-auto mr-2">
                 <h2 class="text-xl font-bold">PerformeIQ</h2>
                 <button id="sidebar-toggle" class="sidebar-toggle text-whitCe focus:outline-none">
                     
