--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta http-equiv="Content-Security-Policy" content="img-src 'self' http://orbishr.github.io data:;">
+  <meta http-equiv="Content-Security-Policy" content="img-src 'self' http://OrbisHR.github.io data:;">
   <meta charset="UTF-8" />
   <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <link rel="icon" href="https://github.com/orbishr/Gestion-des-performances/blob/main/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://github.com/OrbisHR/Gestion-des-performances/blob/main/favicon.ico" type="image/x-icon">
   <style>
     .bg-gradient {
       background: linear-gradient(135deg, #2563eb 0%, #1e40af 100%);
