--- a/manager_dashboard.html
+++ b/manager_dashboard.html
@@ -95,7 +95,7 @@
         <!-- Sidebar -->
         <div id="sidebar" class="sidebar w-64 bg-blue-800 text-white min-h-screen fixed z-10">
             <div class="p-4 flex items-center justify-between border-b border-blue-700">
-                <img src="https://github.com/Oukafati/Gestion-des-performances/blob/main/Logo.png" alt="Logo ORBIS" class="h-8 w-auto mr-2">
+                <img src="Logo.png" alt="Logo ORBIS" class="h-8 w-auto mr-2">
                 <h2 class="text-xl font-bold">PerformeIQ</h2>
                 <button id="sidebar-toggle" class="sidebar-toggle text-whitCe focus:outline-none">
                     
@@ -409,7 +409,7 @@
     auth: {
         clientId: "27cd1750-4356-4fd4-a4d2-0b418ca13f34", // Remplacez par votre client ID Azure AD
         authority: "https://login.microsoftonline.com/common",
-        redirectUri: "http://localhost:5500/" // Remplacez par votre URL de redirection
+        redirectUri: "https://orbishr.github.io/Gestion-des-performances/manager_dashboard.html/" // Remplacez par votre URL de redirection
     },
     cache: {
         cacheLocation: "localStorage",
