--- a/manager_dashboard.html
+++ b/manager_dashboard.html
@@ -152,9 +152,12 @@
                             </div>
                             <div>
                                 <label for="collaborateur-name" class="block text-gray-700 mb-2 font-medium">
-                                    <i class="fas fa-user mr-2 text-blue-500"></i>Nom et Prénom du collaborateur
+                                    <i class="fas fa-user mr-2 text-blue-500"></i>Prénom et Nom du collaborateur
                                 </label>
-                                <input type="text" id="collaborateur-name" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Entrez le nom et prénom du collaborateur">
+                                <input list="collaborateur-list" id="collaborateur-name" name="collaborateur-name"
+                                    class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                    placeholder="Prénom et Nom du collaborateur...">
+
                             </div>
                             <div>
                                 <label for="collaborateur-societe" class="block text-gray-700 mb-2 font-medium">
@@ -1714,9 +1717,9 @@ const body = `
     const fileName = `Objectifs_${collaborateurName.replace(/\s+/g, '_')}_${date}.xlsx`;
     XLSX.writeFile(wb, fileName);
     // Préparer et ouvrir l'email
-    const to = "rh.performance@orbisholding.ma"; // <-- à adapter
+    const to = `${collaborateurName},rh.performance@orbisholding.ma`; // <-- à adapter
     const subject = encodeURIComponent(`Objectifs  - ${collaborateurName}`);
-    const bodyText = `Bonjour,\n\nNous vous transmettons ci-joint les objectifs établis pour ${collaborateurName} .\n\nBien cordialement,\n${managerName}`;
+    const bodyText = `Bonjour,\n\nNous vous transmettons ci-joint les objectifs établis pour ${collaborateurName} \n\nBien cordialement,\n${managerName}`;
     const body = encodeURIComponent(bodyText);
     alert("Le fichier Excel des objectifs a été téléchargé. Un e-mail est prêt à être envoyé au RH et au collaborateur.");
     window.location.href = `mailto:${to}?subject=${subject}&body=${body}`;
